src/objects/Documentador__c.object
<CustomObject>
    <fields>
        <fullName>Editable__c</fullName>
        <description>Campo para habilitar la edición de descripción</description>
        <label>Editable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaInicio__c</fullName>
        <label>Fecha de Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaModif__c</fullName>
        <description>Última fecha de modificación</description>
        <label>Fecha de Modificación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdComponente__c</fullName>
        <label>IdComponente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacion__c</fullName>
        <label>Observación</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <description>Tipos de archivos</description>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Clase Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Componente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuración Personalizada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurso Estático</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce Page</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Documentador</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Documentador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>